[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/battlefield/battlefield_visuals_3d.gd" id="1_script"]

[node name="Battlefield3D" type="Node3D" groups=["battlefield"]]
script = ExtResource("1_script")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 960, 540, 1000)
projection = 1
size = 540.0
near = 0.1
far = 2000.0

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.866025, -0.433013, 0.25, 0, 0.5, 0.866025, -0.5, -0.75, 0.433013, 0, 1000, 0)
light_energy = 0.8
light_color = Color(1, 0.95, 0.8, 1)

[node name="SkyLayer" type="Sprite3D" parent="."]
transform = Transform3D(1920, 0, 0, 0, 540, 0, 0, 0, 1, 960, 270, -1000)
billboard = 0
shaded = false
alpha_cut = 1

[node name="GroundLayer" type="Sprite3D" parent="."]
transform = Transform3D(1920, 0, 0, 0, 540, 0, 0, 0, 1, 960, 810, 0)
billboard = 0
shaded = false
alpha_cut = 1

[node name="TestCube" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 960, 540, 0)
size = Vector3(50, 50, 50)

[node name="GameplayLayer" type="Node3D" parent="."]

[node name="UILayer" type="CanvasLayer" parent="."]
layer = 100
